# ZKSL

./: .gitignore  Cargo.toml  README.md  build.rs  out.txt
examples/criteo/: txt_to_input.py
examples/deepfm/: model.json  model.onnx  model.py  model_1129.json  modify_json.py
examples/embedding/: em_model.py  model.json  model.onnx  model.py
examples/lenet/: model.json  model.onnx  model.py  model_lenet.json  model_lenet.onnx
examples/lenet_conv/: model.json
examples/lenet_mlp/: model.json
examples/loan_default/: model_1.json  txt_to_input.py
examples/mlp2/: gemm.json  model.json  model.onnx  model.py
examples/mnist_mlp2/: input.json  input.py  model.json  model.onnx  model.py
proto/federated/: federated.proto
python/: converter.py  mlp2.onnx
src/: graph.rs  lib.rs  model.rs  weight.rs
src/circuits/: conv_circuit.rs  div_circuit.rs  exp_circuit.rs  fm_circuit.rs  fully_connected.rs  max_pool_circuit.rs  mod.rs  softmax_loss_circuit.rs
src/commitment/: mod.rs  poseidon.rs
src/commitments/: poseidon.rs
src/layers/: fully_connected.rs  layer.rs  mod.rs  none.rs
src/loss/: loss.rs  mod.rs  sigmoid.rs  softmax.rs
src/net/: client.rs  handler.rs  server.rs
src/numeric/: accumulator.rs  add.rs  add_same.rs  div.rs  div_same.rs  div_sf.rs  dot.rs  dot_vec.rs  max.rs  mod.rs  mul.rs  mul_same.rs  square.rs  sub.rs  sub_same.rs  sum.rs  update.rs
src/numeric/backup/: div_same_b.rs  div_sf_b.rs
src/numeric/lookups/: field_lookup.rs  row_lookup.rs
src/numeric/nonlinear/: exp.rs  gather copy.rs  gather.rs  ln.rs  mod.rs  natural.rs  relu.rs
src/numerics/: accumulator.rs  add.rs  adder.rs  div.rs  dot.rs  max.rs  mod.rs  mul.rs  numeric.rs  sub.rs
src/numerics/lookups/: field_lookup.rs  mod.rs  row_lookup.rs
src/numerics/nonlinear/: exp.rs  input_lookup.rs  ln.rs  mod.rs  nonlinear.rs  relu.rs
src/operation/: add.rs  concat.rs  conv.rs  fm.rs  gather copy.rs  gather.rs  gemm.rs  max_pool.rs  mean.rs  mod.rs  none.rs  relu.rs  reshape.rs  softmax.rs  squeeze.rs  unsqueeze.rs
src/operations/: concat.rs  gemm.rs  mod.rs  none.rs  operation.rs  relu.rs  softmax.rs
src/prover/: helper.rs  mod.rs  proof.rs  prover.rs  prover_kzg.rs  verifier.rs
src/provers/: mod.rs  prover.rs  prover_kzg.rs
src/stage/: assign.rs  backward.rs  backward_test.rs  forward.rs  forward_test.rs  gradient.rs  gradient_test.rs  initialize.rs  mod.rs
src/stages/: assign.rs  backward.rs  backward_test.rs  forward.rs  forward_test.rs  gradient.rs  gradient_test.rs
src/utils/: args.rs  helpers.rs  loader.rs  matcher.rs  math.rs  mod.rs  test.json
