[package]
name = "zkml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2 = { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2" }
halo2_proofs = { git="https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", package="halo2_proofs" }
halo2_poseidon = { path = "./gadgets/poseidon-gadget", package="halo2_poseidon" }
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"