[package]
name = "zkdeepfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"

# algebra
rand = "0.8.5"
ndarray = { version = "0.16", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"

# newest stable version of halo2
# halo2_proofs = { git="https://github.com/privacy-scaling-explorations/halo2", tag = "v0.4.0", package="halo2_proofs", features = ["circuit-params", "derive_serde"] }
# zkml uses this version of halo2_proofs
# halo2_proofs = { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2_proofs", rev="17e9765c199670534c0299c96128d0464a188d0b" }
# my version of halo2_proofshttps://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@github.com/YeexiaoZheng/ZKDeepFM.git

# halo2_proofs = { git="https://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@github.com/YeexiaoZheng/wrapped_halo2", package="halo2_proofs", features = ["derive_serde"] }
# halo2_proofs = { git="https://github.com/YeexiaoZheng/wrapped_ezkl_halo2.git", package="halo2_proofs", features = ["derive_serde", "icicle_gpu"] }
halo2_proofs = { git="https://github.com/YeexiaoZheng/wrapped_ezkl_halo2.git", package="halo2_proofs", features = ["derive_serde", "icicle_gpu"] }
# halo2_proofs ={ git="https://github.com/DelphinusLab/halo2-gpu-specific.git", package="halo2_proofs", features = ["derive_serde"] }
# halo2_proofs = { path="../wrapped_ezkl_halo2/halo2_proofs", package="halo2_proofs", features = ["derive_serde", "icicle_gpu"] }
# halo2curves = { git="https://github.com/privacy-scaling-explorations/halo2curves", rev="b753a832e92d5c86c5c997327a9cf9de86a18851", default-features = false }
# ff = "0.13"
# rand_core = { version = "0.6", default-features=false, features = ["getrandom"] }
# instant = "0.1"

# log
log = "0.4"
env_logger = "0.11"

# other
lazy_static = "1.4.0"
rayon = "1.10"
core_affinity = "0.8"

clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.43", features = ["full"] }
bincode = "1.3"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"